# rein

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
benchmarks/: Cargo.toml
benchmarks/benches/: physics.rs  physics_iai.rs
benchmarks/src/: lib.rs
docs/plans/: engine-architecture.md
examples/camera_controls/: Cargo.toml
examples/ecs_scene/: Cargo.toml
examples/engine_app/: Cargo.toml
examples/engine_app/src/: main.rs
examples/fog_effect/: Cargo.toml
examples/fog_effect/src/: main.rs
examples/hello_cube/: Cargo.toml
examples/instanced_rendering/: Cargo.toml
examples/instanced_rendering/src/: main.rs
examples/lighting_demo/: Cargo.toml
examples/mass_physics/: Cargo.toml
examples/materials_showcase/: Cargo.toml
examples/normals/: Cargo.toml
examples/normals/src/: main.rs
examples/particles/: Cargo.toml
examples/particles/src/: main.rs
examples/pbr/: Cargo.toml
examples/pbr/src/: main.rs
examples/physics_demo/: Cargo.toml
examples/point_cloud/: Cargo.toml
examples/point_cloud/src/: main.rs
examples/shapes2d/: Cargo.toml
examples/shapes2d/src/: main.rs
examples/sprites/: Cargo.toml
examples/sprites/src/: main.rs
examples/terrain/: Cargo.toml
examples/terrain/src/: main.rs
examples/texture/: Cargo.toml
examples/texture/src/: main.rs
examples/urdf_robot/: Cargo.toml
examples/wireframe/: Cargo.toml
examples/wireframe/src/: main.rs
rein-app/: Cargo.toml
rein-app/src/: main.rs
rein-engine/: Cargo.toml  README.md
rein-engine/benchmarks/: Cargo.toml
rein-engine/benchmarks/benches/: physics.rs  physics_iai.rs
rein-engine/benchmarks/src/: lib.rs
rein-engine/examples/camera_controls/: Cargo.toml
rein-engine/examples/ecs_scene/: Cargo.toml
rein-engine/examples/engine_app/: Cargo.toml
rein-engine/examples/hello_cube/: Cargo.toml
rein-engine/examples/instanced_rendering/: Cargo.toml
rein-engine/examples/lighting_demo/: Cargo.toml
rein-engine/examples/mass_physics/: Cargo.toml
rein-engine/examples/materials_showcase/: Cargo.toml
rein-engine/examples/physics_demo/: Cargo.toml
rein-engine/examples/urdf_robot/: Cargo.toml
rein-engine/src/: lib.rs
rein-engine/src/compute/: mod.rs
rein-engine/src/context/: mod.rs
rein-engine/src/core/: buffer.rs  instance.rs  vertex.rs
rein-engine/src/ecs/: bridge.rs  mod.rs
src/: lib.rs
src/context/: mod.rs
src/core/: buffer.rs  mod.rs  pipeline.rs  render_states.rs  render_target.rs  texture.rs
src/effect/: copy.rs  fog.rs  fullscreen.rs  fxaa.rs  mod.rs
src/engine/: mod.rs
src/gui/: mod.rs  primitive.rs  text.rs  ui.rs
src/physics/: broadphase.rs  collider.rs  contact.rs  mod.rs  narrowphase.rs  rigid_body.rs  solver.rs
src/renderer/: mod.rs  object.rs  viewer.rs
src/shaders/: common.wgsl  gui.wgsl  position.wgsl  skybox.wgsl  sprite.wgsl  terrain.wgsl  unlit.wgsl  uv.wgsl
src/urdf/: robot_model.rs
src/window/: event.rs  frame_io.rs  mod.rs  settings.rs
(+91 files in other folders)
