[package]
name = "rein"
version = "0.1.0"
edition = "2021"
description = "rein 3D Rendering Library"
license = "MIT"
repository = "https://github.com/MechanicalGirlDev/rein"
keywords = ["3d", "graphics", "rendering", "wgpu", "urdf"]
categories = ["graphics", "rendering", "game-development"]

[features]
default = ["window"]
window = ["dep:winit"]
gui = ["dep:glyphon"]

[dependencies]
# GPU
wgpu = "23"
bytemuck = { version = "1.14", features = ["derive"] }

# Window (optional)
winit = { version = "0.30", optional = true }

# Text rendering (optional)
glyphon = { version = "0.7", optional = true }

# Math
glam = "0.29"
nalgebra = "0.33"

# URDF
urdf-rs = "0.8"

# Utilities
tracing = "0.1"
anyhow = "1"
thiserror = "2"
pollster = "0.4"
