[package]
name = "rein"
version = "0.1.1"
edition = "2021"
description = "rein 3D Rendering Library"
license = "MIT"
repository = "https://github.com/MechanicalGirlDev/rein"
keywords = ["3d", "graphics", "rendering", "wgpu", "urdf"]
categories = ["graphics", "rendering", "game-development"]

[features]
default = ["window"]
window = ["dep:winit"]
gui = ["dep:glyphon"]

[dependencies]
# GPU
wgpu = "28"
bytemuck = { version = "1.25", features = ["derive"] }

# Window (optional)
winit = { version = "0.30", optional = true }

# Text rendering (optional)
glyphon = { version = "0.10", optional = true }

# Math
glam = "0.31"
nalgebra = "0.34"

# URDF
urdf-rs = "0.9"

# Utilities
tracing = "0.1"
anyhow = "1"
thiserror = "2"
pollster = "0.4"
