[package]
name = "rein"
version = "0.1.1"
edition = "2021"
description = "rein 3D Engine"
license = "MIT"
repository = "https://github.com/MechanicalGirlDev/rein"
keywords = ["3d", "graphics", "rendering", "wgpu", "urdf", "ecs", "physics"]
categories = ["graphics", "rendering", "game-development"]

[features]
default = ["window"]
window = ["dep:winit"]
gui = ["dep:glyphon"]
compute = []
ecs = ["dep:hecs"]
physics = ["ecs"]
gpu-physics = ["physics"]
engine = ["ecs", "window"]
full = ["engine", "physics", "gpu-physics", "gui"]

[dependencies]
# GPU
wgpu = "28"
bytemuck = { version = "1.25", features = ["derive"] }

# Window (optional)
winit = { version = "0.30", optional = true }

# Text rendering (optional)
glyphon = { version = "0.10", optional = true }

# Math
glam = "0.31"

# URDF
urdf-rs = "0.9"

# ECS (optional)
hecs = { version = "0.10", optional = true }

# Utilities
tracing = "0.1"
anyhow = "1"
thiserror = "2"
pollster = "0.4"
