[package]
name = "rein-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rein = { path = "..", features = ["physics", "gpu-physics", "compute"] }
glam = "0.31"
hecs = "0.11"
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
iai-callgrind = "0.16"

[[bench]]
name = "physics"
harness = false

[[bench]]
name = "physics_iai"
harness = false
